@@ -1,3 +1,13 @@
+Libbson-1.1.9
+=============
+
+This is a patch release with a fix for the build system:
+
+ * "./configure --enable-coverage" works now.
+
+-- A. Jesse Jiryu Davis
+
+
 Libbson-1.1.8
 =============
 
